fix: make page content responsive to window size
The main content of all pages is now responsive to different browser sizes. The recipe table however doesn't stack or
overflow yet when browser size is too narrow.

--- a/style.css
+++ b/style.css
@@ -49,12 +49,19 @@ footer {
 /* main content section */
 
 .content {
-    padding-left: 330px;
-    padding-right: 330px;
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .content .paragraph {
     padding-top: 40px;
+}
+
+.table-alignment {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .recipe-table {
